fixed javascript includes

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -4,10 +4,10 @@
     %link(rel="stylesheet" href="css/styles.css")
     %script{:type => "text/javascript", :src =>"javascripts/jquery-1.6.1.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/util.jquery.js"}
+    %script{:type => "text/javascript", :src =>"http://cdn.pubnub.com/pubnub-3.1.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/pubnub.js"}
     %script{:type => "text/javascript", :src =>"javascripts/restaurants.js"}
     %script{:type => "text/javascript", :src =>"javascripts/jjquery.cookie-modified.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/http://cdn.pubnub.com/pubnub-3.1.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index.js"}
     %title Sinatra. index.haml
 
@@ -21,6 +21,6 @@
       %br
       vote for:
       %input#txtVote(type="text")
-      %div.cursor_hover#vote vote
+      %div.cursor_hover#btnVote vote
 
     %div#vote_list
