changed current huddle name

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -21,6 +21,7 @@
       %br
       vote for:
       %input#txtVote(type="text")
-      %div.cursor_hover#btnVote vote
+      %br
+      %input#btnVote{:type => "button", :value => "vote"}
 
     %div#vote_list
