huddle name is defined in one place, on the haml page for now

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -15,6 +15,7 @@
 
     %div(pub-key="pub-f692f5fb-58e7-4f72-b195-0b04d3960da8" sub-key="sub-a2494751-c5a0-11e0-b441-f562192438d2" ssl="off" origin="pubsub.pubnub.com" id="pubnub")
 
+    %div#huddle_name mrh_lunchhuddle.0815.1
     %form(action="#")
       name: 
       %input#txtName(type="text")
