added 'msg_type' key to published messages

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -5,7 +5,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/jquery-1.6.1.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/util.jquery.js"}
     %script{:type => "text/javascript", :src =>"http://cdn.pubnub.com/pubnub-3.1.min.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/pubnub.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/messaging.js"}
     %script{:type => "text/javascript", :src =>"javascripts/restaurants.js"}
     %script{:type => "text/javascript", :src =>"javascripts/jjquery.cookie-modified.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index.js"}
