--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -3,6 +3,7 @@
   %head
     %link(rel="stylesheet" href="css/styles.css")
     %script{:type => "text/javascript", :src =>"javascripts/jquery-1.6.1.min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/underscore.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/util.jquery.js"}
     %script{:type => "text/javascript", :src =>"http://cdn.pubnub.com/pubnub-3.1.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/messaging.js"}
