--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -11,6 +11,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/restaurants.js"}
     %script{:type => "text/javascript", :src =>"javascripts/jjquery.cookie-modified.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/index_event_handlers.js"}
     %title Sinatra. index.haml
 
   %body
