handling a Vote object and a list of Vote objects

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -7,6 +7,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/Modernizr.dev.js"}
     %script{:type => "text/javascript", :src =>"javascripts/util.jquery.js"}
     %script{:type => "text/javascript", :src =>"http://cdn.pubnub.com/pubnub-3.1.min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/VoteView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/messaging.js"}
     %script{:type => "text/javascript", :src =>"javascripts/restaurants.js"}
     %script{:type => "text/javascript", :src =>"javascripts/jjquery.cookie-modified.js"}
