--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -33,5 +33,8 @@
       %br
       %input#btnVote{:type => "button", :value => "vote"}
 
+    %h3 Our Votes
     %div#vote_list
+
+    %h3 Saved Lunch Spots
     %div#saved_lunch_spots
