--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -56,3 +56,33 @@ h1, h2, h3, h4 {
   -moz-border-radius: 2px;
   border-radius: 2px;
 }
+.vote_for_saved {
+  font-size: 75%;
+  color: white;
+  background-color: #7fbe00;
+  padding: 4px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+}
+.delete_saved {
+  font-size: 75%;
+  color: white;
+  background-color: #850000;
+  padding: 4px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+}
+
+.lunch_spot {
+  display: inline-block;
+  width: 240px;
+  background-color: #537c00;
+  color: white;
+  font-size: 85%;
+  margin: 3px;
+  padding: 3px;
+  padding-left: 5px;
+  border: 1px solid #005050;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+}
