--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -33,8 +33,10 @@
       %br
       %input#btnVote{:type => "button", :value => "vote"}
 
-    %h3 Our Votes
-    %div#vote_list
+    %div.section
+      %h3 Our Votes
+      %div#vote_list
 
-    %h3 Saved Lunch Spots
-    %div#saved_lunch_spots
+    %div.section
+      %h3 Saved Lunch Spots
+      %div#saved_lunch_spots
