--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -13,6 +13,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/messaging.js"}
     %script{:type => "text/javascript", :src =>"javascripts/restaurants.js"}
     %script{:type => "text/javascript", :src =>"javascripts/jjquery.cookie-modified.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index_event_handlers.js"}
     %title Sinatra. index.haml
@@ -23,6 +24,10 @@
 
 
     %h4#huddle_name #{@huddle}
+
+    %div#log
+      %div#log_switch y 
+      %div#log_content
 
     %form(action="#")
       name: 
