--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -26,7 +26,7 @@
     %h4#huddle_name #{@huddle}
 
     %div#log
-      %div#log_switch y 
+      %div#log_toggle #{@log_toggle} 
       %div#log_content
 
     %form(action="#")
