--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -16,6 +16,18 @@ h1, h2, h3, h4 {
   width: 350px;
 }
 
+#util_link {
+  color: #850000;
+  background-color: #850000;
+  font-weight: normal;
+  font-size: 70%;
+  text-align: right;
+}
+
+.white_text {
+  color: white;
+}
+
 h3 span.foo {
   color: #005050;
   font-weight: normal;
