--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -23,7 +23,9 @@
     %div(pub-key="pub-f692f5fb-58e7-4f72-b195-0b04d3960da8" sub-key="sub-a2494751-c5a0-11e0-b441-f562192438d2" ssl="off" origin="pubsub.pubnub.com" id="pubnub")
 
 
-    %h3.main_title Lunch Huddle
+    %h3.main_title 
+      Lunch Huddle
+      %span#util_link utility
 
     %div#log
       %div#log_toggle #{@log_toggle} 
