clear localstorage from utility page

--- a/app/views/utility.haml
+++ b/app/views/utility.haml
@@ -3,6 +3,7 @@
   %head
     %link(rel="stylesheet" href="css/styles.css")
     %script{:type => "text/javascript", :src =>"javascripts/jquery-1.6.1.min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/jjquery.cookie-modified.js"}
     %script{:type => "text/javascript", :src =>"javascripts/underscore.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/Modernizr.dev.js"}
     %script{:type => "text/javascript", :src =>"javascripts/util.jquery.js"}
@@ -23,5 +24,4 @@
     .div.section
       %h4 Local Data
 
-      %div.cursor_hover#clear_local_storage clear local storage
-      %div.cursor_hover#clear_cookies clear cookies
+      %div.cursor_hover#clear_local_storage clear saved lunch spots
