--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -39,7 +39,7 @@
           name: 
           %input#txtName(type="text")
           %br
-          vote for:
+          where to eat? &nbsp;
           %input#txtLunchSpot(type="text")
           %br
           %input#btnVote{:type => "button", :value => "vote"}
