--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -17,12 +17,11 @@
     %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index_event_handlers.js"}
-    %title Sinatra. index.haml
+    %title Lunch Huddle
 
   %body
 
     %div(pub-key="pub-f692f5fb-58e7-4f72-b195-0b04d3960da8" sub-key="sub-a2494751-c5a0-11e0-b441-f562192438d2" ssl="off" origin="pubsub.pubnub.com" id="pubnub")
-
 
     %div#all_content
 
@@ -36,9 +35,10 @@
   
       %div.section
         %form(action="#")
-          name: 
-          %input#txtName(type="text")
+          Welcome  
+          %span#txtName
           %br
+
           where to eat? &nbsp;
           %input#txtLunchSpot(type="text")
           %br
