--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -52,9 +52,27 @@ h3 span.foo {
   /* border-radius: 3px; */
 }
 
-.vote_item {
+.my_vote {
+  background-color: #005050;
   display: inline-block;
-  width: 200px;
+  width: 130px;
+  color: white;
+  font-size: 85%;
+  margin: 1px;
+  padding: 3px;
+  padding-left: 5px;
+  border: 1px solid #005050;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+}
+
+/* .vote_item { */
+/*   background-color: #007a7a; */
+/* } */
+
+.vote {
+  display: inline-block;
+  width: 130px;
   background-color: #007a7a;
   color: white;
   font-size: 85%;
@@ -65,18 +83,9 @@ h3 span.foo {
   -moz-border-radius: 7px;
   border-radius: 7px;
 }
-.my_vote_item {
-  display: inline-block;
-  width: 200px;
-  background-color: #005050;
-  color: white;
-  font-size: 85%;
-  margin: 1px;
-  padding: 3px;
-  padding-left: 5px;
-  /* border: 3px solid #005050; */
-  -moz-border-radius: 7px;
-  border-radius: 7px;
+
+.user_id {
+  display: none;
 }
 
 .vote_for {
