index name is link to /userinfo page

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -35,8 +35,8 @@
   
       %div.section
         %form(action="#")
-          Welcome  
-          %span#txtName
+          Welcome
+          %a#txtName{:href => '/userinfo'} 
           %br
 
           where to eat? &nbsp;
