--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -36,7 +36,7 @@
       %div.section
         %form(action="#")
           Welcome
-          %a#txtName{:href => '/userinfo'} 
+          %a#txtName{:href => "/userinfo?huddle=#{@huddle}"} 
           %br
 
           where to eat? &nbsp;
