an alert box explaining why we collect email address

--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -25,6 +25,7 @@
 
         email address: 
         %input#txtEmailAddr{:type => "text"}
+        %a.why_email{:href => "#"} ?
         %br
 
         huddle: 
