'enter key now triggers the vote button click. all spaces for a restaurant is not valid.

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -42,7 +42,7 @@
           where to eat? &nbsp;
           %input#txtLunchSpot(type="text")
           %br
-          %input#btnVote{:type => "button", :value => "vote"}
+          %input#btnVote.defaultButton{:type => "button", :value => "vote"}
   
       %div.section
         %h3
