user can now enter a comment

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -42,6 +42,9 @@
           where to eat? &nbsp;
           %input#txtLunchSpot(type="text")
           %br
+          comment: &nbsp;
+          %input#txtMessage(type="text")
+          %br
           %input#btnVote.defaultButton{:type => "button", :value => "vote"}
   
       %div.section
