--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -100,6 +100,17 @@ h3 span.foo {
   -moz-border-radius: 2px;
   border-radius: 2px;
 }
+
+.user_msg {
+  font-family: garamond, georgia, serif;
+  font-size: 0.95em;
+  color: #005050;
+  padding-left: 10px;
+  padding-top: 0px;
+  margin-top: 0px;
+  padding-bottom: 5px;
+}
+
 .delete_saved {
   font-size: 75%;
   color: white;
