change text of vote button

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -45,7 +45,7 @@
           comment: &nbsp;
           %input#txtMessage(type="text")
           %br
-          %input#btnVote.defaultButton{:type => "button", :value => "vote"}
+          %input#btnVote.defaultButton{:type => "button", :value => "vote and/or comment"}
   
       %div.section
         %h3
