--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -87,7 +87,7 @@ h3 span.foo {
 .vote_for {
   font-size: 75%;
   color: white;
-  background-color: #7fbe00;
+  /* background-color: #7fbe00; */
   padding: 4px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -95,7 +95,7 @@ h3 span.foo {
 .vote_for_saved {
   font-size: 75%;
   color: white;
-  background-color: #7fbe00;
+  /* background-color: #7fbe00; */
   padding: 4px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -114,7 +114,7 @@ h3 span.foo {
 .delete_saved {
   font-size: 75%;
   color: white;
-  background-color: #850000;
+  /* background-color: #850000; */
   padding: 4px;
   -moz-border-radius: 2px;
   border-radius: 2px;
