moving files around

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -2,18 +2,20 @@
 %html
   %head
     %link(rel="stylesheet" href="css/styles.css")
-    %script{:type => "text/javascript", :src =>"javascripts/jquery-1.6.1.min.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/underscore.min.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/Modernizr.dev.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/util.jquery.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/jquery-1.6.1.min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/underscore.min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/backbone-min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/util.jquery.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/jjquery.cookie-modified.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/Modernizr.dev.js"}
     %script{:type => "text/javascript", :src =>"http://cdn.pubnub.com/pubnub-3.1.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/UserInfo.js"}
     %script{:type => "text/javascript", :src =>"javascripts/VoteView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/SavedLunchSpots.js"}
     %script{:type => "text/javascript", :src =>"javascripts/DataStore.js"}
     %script{:type => "text/javascript", :src =>"javascripts/messaging.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/restaurants.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/jjquery.cookie-modified.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/model/RestaurantModel.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/view/VFLunchSpotsView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index_event_handlers.js"}
