--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -2,12 +2,12 @@
 %html
   %head
     %link(rel="stylesheet" href="css/styles.css")
-    %script{:type => "text/javascript", :src =>"javascripts/jquery-1.6.1.min.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/underscore.min.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/util.jquery.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/jquery-1.6.1.min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/underscore.min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/util.jquery.js"}
     %script{:type => "text/javascript", :src =>"javascripts/UserInfo.js"}
     %script{:type => "text/javascript", :src =>"javascripts/DataStore.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/jjquery.cookie-modified.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/jjquery.cookie-modified.js"}
     %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %title Lunch Huddle, User Info
 
