--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -10,12 +10,13 @@
     %script{:type => "text/javascript", :src =>"javascripts/lib/Modernizr.dev.js"}
     %script{:type => "text/javascript", :src =>"http://cdn.pubnub.com/pubnub-3.1.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/UserInfo.js"}
-    %script{:type => "text/javascript", :src =>"javascripts/VoteView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/DataStore.js"}
     %script{:type => "text/javascript", :src =>"javascripts/messaging.js"}
     %script{:type => "text/javascript", :src =>"javascripts/model/RestaurantModel.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/model/LunchSpot.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/VFLunchSpotsView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/SavedLunchSpotsView.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/view/VoteView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index.js"}
     %script{:type => "text/javascript", :src =>"javascripts/index_event_handlers.js"}
