--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -19,6 +19,8 @@ h1, h2, h3, h4 {
   padding: 2px;
   padding-left: 5px;
   width: 300px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
 }
 
 #util_link {
