--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -56,6 +56,8 @@
           %span.foo Huddle name: 
           %span#huddle_name #{@huddle}
         %div#vote_list
+        %hr
+          %a{:href => "/huddle?huddle=#{@huddle}"}invite others to huddle
   
       %div.section
         %div#saved_lunch_spots_view
