--- a/app/views/huddle.haml
+++ b/app/views/huddle.haml
@@ -12,6 +12,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/Logger.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/AddInviteeView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/InviteeListView.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/model/Invitee.js"}
     %script{:type => "text/javascript", :src =>"javascripts/huddle.js"}
 
     %title Lunch Huddle, Huddle Info
