working on ActionMailer and sendgrid

--- a/app/views/huddle.haml
+++ b/app/views/huddle.haml
@@ -38,6 +38,6 @@
 
       %h4 List of Invitees
       %div#invitee_list
-  
-      %form(action="/")
-        %input#btnSend{:type => "button", :value => "Send Invitation"}
+
+      %form(action="/huddle/invite")
+        %input#btnInvite{:type => "submit", :value => "Invite"}
