moved UserInfoView to view directory

--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -15,6 +15,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/index_event_handlers.js"}
     %script{:type => "text/javascript", :src =>"javascripts/model/RestaurantModel.js"}
     %script{:type => "text/javascript", :src =>"javascripts/model/LunchSpot.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/view/UserInfoView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/VFLunchSpotsView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/SavedLunchSpotsView.js"}
     %script{:type => "text/javascript", :src =>"javascripts/view/VoteView.js"}
