wording on the UserInfo page

--- a/app/views/userinfo.haml
+++ b/app/views/userinfo.haml
@@ -21,7 +21,7 @@
 
     %div.section
       %h3 User Information
-      %p Fill in all the fields and join the huddle
+      %p Fill in all the fields before joining the huddle
       %div#user_info_view
         %form(action="/")
           name: 
