--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -7,6 +7,7 @@
     %script{:type => "text/javascript", :src =>"javascripts/lib/backbone-min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/util.jquery.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/jjquery.cookie-modified.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/mustache.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/Modernizr.dev.js"}
     %script{:type => "text/javascript", :src =>"http://cdn.pubnub.com/pubnub-3.1.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/UserInfo.js"}
@@ -65,6 +66,7 @@
       %div.section
         %div#vetoed_lunch_spots_view
           %h3 Veto
+          %div#veto_list
 
       %div.section
         %div#saved_lunch_spots_view
