--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -94,6 +94,42 @@ h3 span.foo {
   -moz-border-radius: 2px;
   border-radius: 2px; */
 }
+
+.veto_color {
+  background-color: #850000;
+}
+
+.veto {
+  display: inline-block;
+  width: 145px;
+  color: white;
+  font-size: 85%;
+  margin: 1px;
+  padding: 3px;
+  padding-left: 5px;
+  border: 1px solid #005050;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+}
+
+.veto_user_name {
+  display: inline-block;
+  width: 60px;
+  background-color: #85000;
+  color: white;
+  font-size: 85%;
+  margin: 1px;
+  padding: 3px;
+  padding-left: 5px;
+  border: 1px solid #005050;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+}
+
+.veto_user_id {
+  display: none;
+}
+
 .vote_for_saved {
   /* font-size: 75%;
   color: white; */
