--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -65,7 +65,7 @@
   
       %div.section
         %div#vetoed_lunch_spots_view
-          %h3 Veto
+          %h3 In a word, 'No'
           %div#veto_list
 
       %div.section
