--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -3,6 +3,7 @@
   %head
     %link(rel="stylesheet" href="css/styles.css")
     %script{:type => "text/javascript", :src =>"javascripts/lib/jquery-1.6.1.min.js"}
+    %script{:type => "text/javascript", :src =>"javascripts/lib/jquery-ui-1.8.13.custom.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/underscore.min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/backbone-min.js"}
     %script{:type => "text/javascript", :src =>"javascripts/lib/util.jquery.js"}
