--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -57,7 +57,7 @@
   
       %div.section
         %div#vf_lunch_spots_view
-          %h3
+          %h3.drag_handle
             %span.foo Huddle name: 
             %span#huddle_name #{@huddle}
           %div#vote_list
@@ -71,6 +71,6 @@
 
       %div.section
         %div#saved_lunch_spots_view
-          %h3 Saved Lunch Spots
+          %h3.drag_handle Saved Lunch Spots
           %div#saved_lunch_spots
 
