--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -66,7 +66,7 @@
   
       %div.section
         %div#vetoed_lunch_spots_view
-          %h3 I Won't Eat There
+          %h3.drag_handle I Won't Eat There
           %div#veto_list
 
       %div.section
